# VieSchedpp

./: .clang-format  .gitignore  .gitmodules  .travis.yml  AbstractAntenna.cpp  AbstractAntenna.h  AbstractCableWrap.cpp  AbstractCableWrap.h  AbstractFlux.cpp  AbstractFlux.h  AbstractHorizonMask.cpp  AbstractHorizonMask.h  Antenna.cpp  Antenna.h  Antenna_AzEl.cpp  Antenna_AzEl.h  Antenna_HaDc.cpp  Antenna_HaDc.h  Antenna_XYew.cpp  Antenna_XYew.h  AstronomicalParameters.cpp  AstronomicalParameters.h  Baseline.cpp  Baseline.h  Bbc.cpp  Bbc.h  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CableWrap.cpp  CableWrap.h  CableWrap_AzEl.cpp  CableWrap_AzEl.h  CableWrap_HaDc.cpp  CableWrap_HaDc.h  CableWrap_XYew.cpp  CableWrap_XYew.h  CalibratorBlock.cpp  CalibratorBlock.h  Constants.h  (+4526 more)
.github/ISSUE_TEMPLATE/: bug_report.md  custom-issue.md
Algorithm/: FocusCorners.cpp  FocusCorners.h
Eigen/: CMakeLists.txt
Eigen/src/Cholesky/: LDLT.h  LLT.h  LLT_LAPACKE.h
Eigen/src/CholmodSupport/: CholmodSupport.h
Eigen/src/Core/: Array.h  ArrayBase.h  ArrayWrapper.h  Assign.h  AssignEvaluator.h  Assign_MKL.h  BandMatrix.h  Block.h  BooleanRedux.h  CommaInitializer.h  ConditionEstimator.h  CoreEvaluators.h  CoreIterators.h  CwiseBinaryOp.h  CwiseNullaryOp.h  CwiseTernaryOp.h  CwiseUnaryOp.h  CwiseUnaryView.h  DenseBase.h  DenseCoeffsBase.h  DenseStorage.h  (+46 more)
Input/: LogParser.cpp  LogParser.h  SkdCatalogReader.cpp  SkdCatalogReader.h  SkdParser.cpp  SkdParser.h  StpParser.cpp  StpParser.h
Misc/: AstrometricCalibratorBlock.cpp  AstrometricCalibratorBlock.h  AstronomicalParameters.cpp  AstronomicalParameters.h  AvoidSatellites.cpp  AvoidSatellites.h  CalibratorBlock.cpp  CalibratorBlock.h  CalibratorScanDescriptor.cpp  CalibratorScanDescriptor.h  Constants.h  DifferentialParallacticAngleBlock.cpp  DifferentialParallacticAngleBlock.h  Flags.cpp  Flags.h  HighImpactScanDescriptor.cpp  HighImpactScanDescriptor.h  LookupTable.cpp  LookupTable.h  MultiScheduling.cpp  MultiScheduling.h  ParallacticAngleBlock.cpp  ParallacticAngleBlock.h  StationEndposition.cpp  StationEndposition.h  Subnetting.h  TimeSystem.cpp  TimeSystem.h  VieVS_NamedObject.cpp  VieVS_NamedObject.h  VieVS_Object.cpp  VieVS_Object.h  WeightFactors.cpp  WeightFactors.h  sofa.h  sofam.h  util.cpp  util.h
ObservingMode/: Bbc.cpp  Bbc.h  Freq.cpp  Freq.h  If.cpp  If.h  Mode.cpp  Mode.h  ObservingMode.cpp  ObservingMode.h  Track.cpp  Track.h
Output/: Ast.cpp  Ast.h  OperationNotes.cpp  OperationNotes.h  Output.cpp  Output.h  SNR_table.cpp  SNR_table.h  Skd.cpp  Skd.h  SourceStatistics.cpp  SourceStatistics.h  Vex.cpp  Vex.h
Satellite/: Satellite.cpp  Satellite.h  SatelliteMain.cpp  SatelliteMain.h  SatelliteObs.cpp  SatelliteObs.h  SatelliteOutput.cpp  SatelliteOutput.h
Satellite/libsgp4/: CMakeLists.txt  CoordGeodetic.h  CoordTopocentric.h  DateTime.h  DecayedException.h  Eci.cc  Eci.h  Globals.h  Observer.cc  Observer.h  OrbitalElements.cc  OrbitalElements.h  SGP4.cc  SGP4.h  SatelliteException.h  SolarPosition.cc  SolarPosition.h  TimeSpan.h  Tle.cc  Tle.h  TleException.h  Util.cc  Util.h  Vector.h
Scan/: Observation.cpp  Observation.h  PointingVector.cpp  PointingVector.h  Scan.cpp  Scan.h  ScanTimes.cpp  ScanTimes.h  Subcon.cpp  Subcon.h
Simulator/: Simulator.cpp  Simulator.h  Solver.cpp  Solver.h  Unknown.cpp  Unknown.h
Source/: AbstractSource.cpp  AbstractSource.h  Quasar.cpp  Quasar.h  Satellite.cpp  Satellite.h  Source.cpp  Source.h  SourceList.cpp  SourceList.h  Spacecraft.cpp  Spacecraft.h
Source/Flux/: AbstractFlux.cpp  AbstractFlux.h  Flux_B.cpp  Flux_B.h  Flux_M.cpp  Flux_M.h  Flux_constant.cpp  Flux_constant.h  Flux_satellite.cpp  Flux_satellite.h
Station/: Baseline.cpp  Baseline.h  Network.cpp  Network.h  Position.cpp  Position.h  SkyCoverage.cpp  SkyCoverage.h  Station.cpp  Station.h
Station/Antenna/: AbstractAntenna.cpp  AbstractAntenna.h  Antenna_AzEl.cpp  Antenna_AzEl.h  Antenna_AzEl_acceleration.cpp  Antenna_AzEl_acceleration.h  Antenna_GGAO.cpp  Antenna_GGAO.h  Antenna_HaDc.cpp  Antenna_HaDc.h  Antenna_ONSALA_VGOS.cpp  Antenna_ONSALA_VGOS.h  Antenna_XYew.cpp  Antenna_XYew.h
Station/CableWrap/: AbstractCableWrap.cpp  AbstractCableWrap.h  CableWrap_AzEl.cpp  CableWrap_AzEl.h  CableWrap_HaDc.cpp  CableWrap_HaDc.h  CableWrap_XYew.cpp  CableWrap_XYew.h
Station/Equip/: AbstractEquipment.cpp  AbstractEquipment.h  Equipment.cpp  Equipment.h  Equipment_constant.cpp  Equipment_constant.h  Equipment_elDependent.cpp  Equipment_elDependent.h  Equipment_elModel.cpp  Equipment_elModel.h  Equipment_elTable.cpp  Equipment_elTable.h
Station/HorizonMask/: AbstractHorizonMask.cpp  AbstractHorizonMask.h  HorizonMask_line.cpp  HorizonMask_line.h  HorizonMask_step.cpp  HorizonMask_step.h
VLBI_Scheduler/: Antenna.h  Baseline.cpp  Baseline.h  CMakeLists.txt  CableWrap.cpp  CableWrap.h  CalibratorBlock.h  Constants.h  Earth.cpp  Earth.h  Equipment.cpp  Equipment.h  FillinmodeEndposition.cpp  FillinmodeEndposition.h  Flux.cpp  Flux.h  Initializer.cpp  Initializer.h  MultiScheduling.cpp  MultiScheduling.h  Nutation.cpp  Output.cpp  Output.h  ParameterGroup.cpp  ParameterSettings.cpp  ParameterSettings.h  PointingVector.h  Position.cpp  Position.h  Scan.cpp  Scan.h  ScanTimes.cpp  ScanTimes.h  Scheduler.cpp  Scheduler.h  Skd.cpp  Skd.h  SkdCatalogReader.cpp  SkdCatalogReader.h  SkyCoverage.h  (+11 more)
XML/: ParameterGroup.cpp  ParameterGroup.h  ParameterSettings.cpp  ParameterSettings.h  ParameterSetup.cpp  ParameterSetup.h
documentation/: .gitignore  Doxyfile  createDocumentation_linux.sh  createDocumentation_windows.bat
icons/: desktop.ini
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+117 more)
(+199 files in other folders)
